--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,4 +1,12 @@
 %p#notice= notice
+
+= search_form_for @search, url: search_posts_path, method: :post do |f|
+  .field
+    =f.label :title_cont, "Название поста содержит"
+    =f.text_field :title_cont
+  .btn.btn-default
+    =f.submit "Поиск"
+
 .row
   .col-xs-12.col-sm-6.col-md-4.col-lg-4
     = render partial: 'layouts/svg', locals: {points: '0,100 30,0 100,0 100,100', fill: 'white'}
